# openai-rubber-ducky

./: Cargo.toml  LICENSE  README
src/: main.rs
