[package]
name = "oai_rubber_ducky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2.5", features = ["full"]}
openai-api = { git = "https://github.com/deontologician/openai-api-rust" , branch = "main" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
pv_leopard = "*"
pv_recorder = "=1.1.0"
ctrlc = "3.2.2"
tts_rust = "0.3.5"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa-foundation = "0.1"
core-foundation = "0.9"
libc = "0.2"
objc = { version = "0.2", features = ["exception"] }
